--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "start": "next start",
     "lint": "next lint",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-    "install:peer-deps": "npm install --legacy-peer-deps",
-    "postinstall": "npm install --legacy-peer-deps"
+    "install:peer-deps": "npm install --legacy-peer-deps"
   },
   "dependencies": {
     "@babel/preset-react": "7.22.15",
